# OCR

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  model.h5
app/back/: model.py
app/back/data/: 0.data  1.data  2.data  3.data  4.data  5.data  6.data  7.data  8.data  9.data
front/: canvas.js  index.html  style.css  train.html
